# GestaltAI

./: .gitignore  README.md  pyproject.toml
app/: .env  env.example  langgraph.json  main.py  pyproject.toml
app/.langgraph_api/: .langgraph_checkpoint.1.pckl  .langgraph_checkpoint.1.pckl.tmp  .langgraph_checkpoint.2.pckl  .langgraph_checkpoint.2.pckl.tmp  .langgraph_checkpoint.3.pckl  .langgraph_checkpoint.3.pckl.tmp  .langgraph_ops.pckl  .langgraph_retry_counter.pckl
app/core/: settings.py
app/langgraph_server/: langgraph.json  pyproject.toml  requirements.txt
app/langgraph_server/gestalt_graphs/: __init__.py
app/langgraph_server/gestalt_graphs/ai_tools/: ai_tools.py
app/langgraph_server/gestalt_graphs/code_generator/: __init__.py  models.py
app/langgraph_server/gestalt_graphs/code_generator/agents/: agent_module.py  agent_simple.py
app/langgraph_server/gestalt_graphs/code_generator/graphs/: gestalt_generator.py  question_html_graph.py  question_metadata_graph.py  server_js_graph.py  server_py_graph.py  solution_html_graph.py
app/langgraph_server/gestalt_graphs/code_generator/prompts/: prompts.py
app/langgraph_server/gestalt_graphs/code_validation/: __init__.py  graph.py
app/langgraph_server/gestalt_graphs/extract_derivations/: graph.py
app/langgraph_server/gestalt_graphs/extract_question/: graph.py
app/langgraph_server/gestalt_graphs/extract_question/output/: output.json
app/langgraph_server/gestalt_graphs/lecture_analysis/: graph.py
app/langgraph_server/gestalt_graphs/lecture_processing/: __init__.py  graph.py  postprocessing.py  processing.py
app/langgraph_server/gestalt_graphs/lecture_processing/output/: output.json  text.txt
app/langgraph_server/gestalt_graphs/models/: extraction.py  models.py
app/langgraph_server/gestalt_graphs/question_classification/: __init__.py  agent.py  graph.py
app/langgraph_server/gestalt_graphs/question_classification/data/: topics.json
app/langgraph_server/output_downloads/: question.html
app/langgraph_server/parsers/: __init__.py  encoder_base.py  image_encoder.py  pdf_parser.py
app/langgraph_server/src/ai_tools/: ai_tools.py
app/langgraph_server/src/code_generator/: __init__.py  document_loader.py  models.py
app/langgraph_server/src/code_generator/agents/: agent_simple.py
app/langgraph_server/src/code_validation/: __init__.py  graph.py
app/langgraph_server/src/question_classification/: __init__.py  agent.py  document_loader.py  models.py  prompts.py  vectorstore.py
app/langgraph_server/src/utils/: utils.py
app/output_downloads/: question.html
app/static/: question.html
app/streamlit/: main.py
app/streamlit_app/: chat_modes.py  client.py  config.py  main.py  settings.py
app/streamlit_app/client/: client.py
app/streamlit_app/config/: __init__.py  chat_modes.py
app/streamlit_app/pages/: chat.py
app/streamlit_app/services/: async_wrappers.py  llm_service.py
app/streamlit_app/state/: session.py
app/streamlit_app/ui/: layout.py
(+7 files in other folders)
