[tool.poetry]
name = "gestaltai"
version = "0.1.0"
description = ""
authors = ["Luciano Bermudez <lucianobmecheng69@gmail.com>"]
package-mode = false
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
graphrag = "^2.7.0"
ipykernel = "^7.1.0"
langchain = "^1.2.4"
langchain-core = "^1.2.7"
langchain-text-splitters = "^1.1.0"
langchain-openai = "^1.1.7"
python-dotenv = "^1.2.1"
streamlit = "^1.53.0"
langgraph-sdk = "^0.3.3"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
