[project]
name = "gestalt_graphs"
version = "0.1.0"
description = ""
authors = [
    {name = "Luciano Bermudez",email = "lucianobmecheng69@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0.0"
dependencies = [
    "langgraph (>=1.0.6,<2.0.0)",
    "python-dotenv (>=1.2.1,<2.0.0)",
    "langchain (>=1.2.6,<2.0.0)",
    "langchain-core (>=1.2.7,<2.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "pydantic (>=2.12.5,<3.0.0)",
    "langgraph-cli[inmem] (>=0.4.11,<0.5.0)",
    "langchain-astradb (>=1.0.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
